# neural-ranking-system

./: .gitignore  pyproject.toml  requirements.txt
scripts/: benchmark_msmarco.py  run_pipeline.py
src/api/: main.py
src/neural_ranking_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/neural_ranking_system/api/: main.py
src/neural_ranking_system/data/: msmarco_loader.py
src/neural_ranking_system/evaluation/: metrics.py
src/neural_ranking_system/pipeline/: search_pipeline.py
src/neural_ranking_system/ranking/: cross_encoder.py
src/retrieval/: faiss_retriever.py
