[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_ranking_system"
version = "0.1.0"
description = "Neural ranking and hybrid retrieval system"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "faiss-cpu",
    "sentence-transformers",
    "torch",
    "transformers",
    "rank-bm25",
    "fastapi",
    "uvicorn",
    "pyyaml",
    "python-dotenv",
    "tqdm"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]